--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <main>
             <div class="container-fluid">
                 
-                <div  class="row" id="teamCards">
+                <div class="row mt-5 p-3" id="teamCards">
 
                 </div>
 
