added members (some)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <body>
         <header>
-            <!-- place navbar here -->
+           <div class="row text-center">
+           <h1> USA 2024 OLYMPIC LINE UP</h1>
+           </div>
         </header>
 
 
