addedcontent-make cardssamesize-adda cardonlyhave9

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Exo+2&display=swap" rel="stylesheet">
         />
 
         <!-- Bootstrap CSS v5.2.1 -->
@@ -37,7 +40,7 @@
         <main>
             <div class="container-fluid">
                 
-                <div class="row mt-5 p-3" id="teamCards">
+                <div class="row mt-5 justify-content-center p-3" id="teamCards">
 
                 </div>
 
